# Galaxy-River-Bot

./: LICENSE  README.md  __init__.py  bot.py  config.py  pyproject.toml  requirements.txt  to_image.py
modules/: EdgeGPT.py  GPT.py  back_end.py  bing.py  cookie.json  get_wyy_id.py  image.py  majors.py  manage.py  music.py  scheduler.py  search_image.py  start.py  translate.py  yiyan.py
modules/data/thursday/: post.json  新建 文本文档 (10).txt  新建 文本文档 (11).txt  新建 文本文档 (12).txt  新建 文本文档 (13).txt  新建 文本文档 (14).txt  新建 文本文档 (15).txt  新建 文本文档 (16).txt  新建 文本文档 (17).txt  新建 文本文档 (18).txt  新建 文本文档 (2).txt  新建 文本文档 (3).txt  新建 文本文档 (4).txt  新建 文本文档 (5).txt  新建 文本文档 (6).txt  新建 文本文档 (7).txt  新建 文本文档 (8).txt  新建 文本文档 (9).txt  新建 文本文档.txt
